--- a/css/styles.css
+++ b/css/styles.css
@@ -770,13 +770,13 @@ footer>.container {
 .button-div :focus {
     color: var(--titli-list--color);
     background-color: var(--accent-colot-too);
-
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button-div :hover {
     color: var(--titli-list--color);
     background-color: var(--accent-colot-too);
-
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 
