--- a/css/styles.css
+++ b/css/styles.css
@@ -487,10 +487,8 @@ h6 {
 
 .info {
 
-    padding-bottom: 32px;
+    padding-bottom: 8px;
     padding-top: 32px;
-
-
 }
 
 .img-subject {
@@ -736,9 +734,10 @@ footer>.container {
 
 /* --------------------------   PARTFOLIO  --------------------------*/
 
-.header,
-.part {
+
+.part-partfolio {
     border-bottom: 1px solid var(--accent-list-color-too);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .partfolio {
