--- a/css/styles.css
+++ b/css/styles.css
@@ -470,7 +470,6 @@ h6 {
 .page {
     font-size: 0;
     margin-right: 24px;
-    padding-bottom: 32px;
     background-color: var(--titli-list--color);
 
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -486,8 +485,15 @@ h6 {
 }
 
 .info {
+    display: block;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
-    padding-bottom: 8px;
+
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 32px;
     padding-top: 32px;
 }
 
@@ -509,7 +515,7 @@ h6 {
     line-height: 1.5;
     text-align: center;
     margin-top: 0;
-    margin-bottom: 0px;
+    margin-bottom: 8px;
 
 
 }
@@ -537,9 +543,13 @@ h6 {
     border-radius: 50%;
     cursor: pointer;
 
-    margin-right: 24px;
 }
 
+.social {
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+}
 
 .icon-team:nth-child(4) {
     margin-right: 0;
